Update translations for activity form

--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -12,11 +12,11 @@
 <div class="mdl-layout__tab-panel" id="scroll-tab-activity" data-toggle="qor.activity">
   <div class="qor-activity__lists"><div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div></div>
   <div class="qor-activities__new">
-    <h4 class="qor-section-title">{{t "activity.NewActivity" "Post a new activity"}}</h4>
+    <h4 class="qor-section-title">{{t "qor_activity.form.new_activity" "New Activity"}}</h4>
     <form class="qor-activity__new-note_form" action="/admin/{{$resource.ToParam}}/{{$result.ID}}/!{{activity_resource.ToParam}}" method="POST">
       {{render_form activity_resource.NewStruct (edit_sections activity_resource) }}
       <div class="qor-form__actions">
-        <button class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect qor-button--save" type="submit">{{t "Save Changes"}}</button>
+        <button class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect qor-button--save" type="submit">{{t "qor_activity.form.add_activity" "Add Activity"}}</button>
       </div>
     </form>
   </div>
@@ -34,7 +34,7 @@
       </div>
       <div class="qor-activity__list-content">[[ &Content ]]</div>
       <div>
-        <strong>{{t "activity.note" "Note:"}}</strong>
+        <strong>{{t "qor_activity.form.note" "Note:"}}</strong>
         <span class="qor-activity__list-note">
           [[ Note ]]
         </span>
