Tweak activity style

--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -49,7 +49,7 @@
           <input class="mdl-textfield__input" type="text" name="QorResource.Note" value="[[ Note ]]">
         </div>
 
-        <button class="qor-activity__edit-save-button" type="submit"><i class="material-icons md-24">save</i></button>
+        <button class="mdl-button mdl-js-button mdl-button--icon qor-activity__edit-save-button" type="submit"><i class="material-icons md-24">done</i></button>
       </div>
     </form>
   </div>
