fix(Activity): fix action button not display bug@1.2: mobile header hidden bug

--- a/views/themes/activity/assets/stylesheets/scss/activity.scss
+++ b/views/themes/activity/assets/stylesheets/scss/activity.scss
@@ -128,3 +128,11 @@
         }
     }
 }
+
+@media screen and (max-width: 1024px){
+    .qor-theme-activity{
+        .qor-tab-bar--activity-header{
+            display: block;
+        }
+    }
+}
