--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -9,7 +9,7 @@
     </div>
   </header>
 
-  <div class="mdl-layout__tab-panel" id="scroll-tab-activity" data-toggle="qor.activity">
+  <div class="mdl-layout__tab-panel" id="scroll-tab-activity" data-note-title="{{t "qor_activity.form.note" "Note:"}}" data-toggle="qor.activity">
     <div class="qor-activities__new">
       <h4 class="qor-section-title">{{t "qor_activity.form.new_activity" "New Activity"}}</h4>
       <form class="qor-activity__new-note_form" action="/admin/{{$resource.ToParam}}/{{$result.ID}}/!{{activity_resource.ToParam}}" method="POST">
@@ -22,36 +22,4 @@
 
     <div class="qor-activity__lists"><div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div></div>
   </div>
-
-  <script id="template__qor-activity__list" type="x-tmpl-mustache">
-    <div class="qor-activity__list">
-    <form class="qor-activity__edit-note_form" action=[[ URL ]] method="POST">
-      <input type="hidden" name="QorResource.ID" value=[[ ID ]]>
-      <div class="qor-activity__list-title">
-        <strong>[[ CreatorName ]]</strong> <span>[[ Action ]]</span>
-      </div>
-      <div class="qor-activity__list-date">
-        [[ UpdatedAt ]]
-      </div>
-      <div class="qor-activity__list-content">[[ &Content ]]</div>
-      <div>
-        <strong>{{t "qor_activity.form.note" "Note:"}}</strong>
-        <span class="qor-activity__list-note">
-          [[ Note ]]
-        </span>
-
-        <a class="mdl-button mdl-js-button mdl-button--icon qor-activity__edit-button" href="#">
-          <i class="material-icons md-18 qor-activity__edit-button">edit</i>
-        </a>
-
-        <div class="mdl-textfield mdl-js-textfield qor-activity__edit-feilds">
-          <label class="mdl-textfield__label">[[ Note ]]</label>
-          <input class="mdl-textfield__input" type="text" name="QorResource.Note" value="[[ Note ]]">
-        </div>
-
-        <button class="mdl-button mdl-js-button mdl-button--icon qor-activity__edit-save-button" type="submit"><i class="material-icons md-24">done</i></button>
-      </div>
-    </form>
-  </div>
-  </script>
 {{end}}
