Show activities count in the header

--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -5,7 +5,13 @@
   <header class="mdl-layout__header mdl-layout--fixed-tabs qor-tab-bar--activity-header">
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
       <a href="#scroll-tab-form" class="mdl-layout__tab is-active">{{t (printf "%v.name" $resource.ToParam) $resource.Name}}</a>
-      <a href="#scroll-tab-activity" class="mdl-layout__tab qor-tab__activity" data-action-id={{$result.ID}}>{{t "qor_activity.form.tab_title" "Activity"}}</a>
+      <a href="#scroll-tab-activity" class="mdl-layout__tab qor-tab__activity" data-action-id={{$result.ID}}>
+        {{t "qor_activity.form.tab_title" "Activity"}}
+        {{$activities_count := get_activities_count .}}
+        {{if $activities_count}}
+          <span class="qor-activities__count">{{$activities_count}}</span>
+        {{end}}
+      </a>
     </div>
   </header>
 
