--- a/views/themes/activity/assets/stylesheets/activity/activity.scss
+++ b/views/themes/activity/assets/stylesheets/activity/activity.scss
@@ -36,6 +36,21 @@
             height: 48px;
             line-height: 48px;
         }
+        .qor-activities__count{
+            position: relative;
+            top: -5px;
+            left: 0;
+            border-radius: 50%;
+            text-align: center;
+            width: 15px;
+            height: 14px;
+            line-height: 15px;
+            font-size: 10px;
+            z-index: 9999;
+            background-color: #ff4081;
+            color: #fff;
+            display: inline-block;
+        }
     }
     .qor-activity__list{
         background-color: #f5f5f5;
