--- a/views/themes/activity/actions/5.activity.tmpl
+++ b/views/themes/activity/actions/5.activity.tmpl
@@ -1,22 +1,16 @@
-{{if (or (eq .Action "edit") (eq .Action "show")) }}
-  {{$resource := .Resource}}
-  {{$result := .Result}}
-  {{$action := print "!" activity_resource.ToParam }}
+{{if (or (eq .Action "edit") (eq .Action "show")) }} {{$resource := .Resource}} {{$result := .Result}} {{$action := print "!" activity_resource.ToParam }}
 
-  <header class="mdl-layout__header mdl-layout--fixed-tabs qor-tab-bar--activity-header">
-    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-      <a href="#scroll-tab-form" class="mdl-layout__tab is-active">{{t (printf "%v.name" $resource.ToParam) $resource.Name}}</a>
-      <a href="#scroll-tab-activity" class="mdl-layout__tab qor-tab__activity" data-resource-url={{join_url (url_for $result $resource) $action}}>
-        {{t "qor_activity.form.tab_title" "Activity"}}
-        {{$activities_count := get_activities_count . }}
-        {{if $activities_count}}
-          <span class="qor-activities__count">{{$activities_count}}</span>
-        {{end}}
-      </a>
-    </div>
-  </header>
+<div data-toggle="qor.activity" class="qor-activities__container">
+  <div class="qor-activities__header">
+    <button data-id="#activity-form" class="is-active">{{t (printf "%v.name" $resource.ToParam) $resource.Name}}</button>
+    <button data-id="#activity-lists" class="qor-tab__activity" data-resource-url={{join_url (url_for $result $resource) $action}}>
+      {{t "qor_activity.form.tab_title" "Activity"}} {{$activities_count := get_activities_count . }} {{if $activities_count}}
+      <span class="qor-activities__count">{{$activities_count}}</span>
+      {{end}}
+    </button>
+  </div>
 
-  <div class="mdl-layout__tab-panel" id="scroll-tab-activity" data-note-title="{{t "qor_activity.form.note" "Note:"}}" data-toggle="qor.activity">
+  <div id="activity-lists" class="qor-activities__content" data-note-title="{{t " qor_activity.form.note " "Note: "}}" style="display: none;">
     <div class="qor-activities__new">
       <h4 class="qor-section-title">{{t "qor_activity.form.new_activity" "New Activity"}}</h4>
       <form class="qor-activity__new-note_form" action="{{join_url (url_for $result $resource) $action}}" method="POST">
@@ -27,6 +21,12 @@
       </form>
     </div>
 
-    <div class="qor-activity__lists"><div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div></div>
+    <div class="qor-activity__lists">
+      <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
+    </div>
+
   </div>
+  <div id="activity-form" class="qor-activities__content"></div>
+</div>
+
 {{end}}
